@@ -1,3 +1,4 @@
+1/15/14 constrain pH to valid range when dragging the graph indicators
 1/15/14 make graph indicators look disabled (using opacity) when value is zero
 1/15/14 GraphIndicatorNode: replace multiple options with isInteractive
 1/14/14 Custom: first attempt at making graph indicators interactive, has some range problems
